--- a/openapi/local/notificiaciones.yaml
+++ b/openapi/local/notificiaciones.yaml
@@ -4,7 +4,7 @@ info:
   version: "1.0"
   description: API para enviar y gestionar notificaciones por correo electrónico, mensajes de texto y WhatsApp.
 servers:
-  - url: http://proyectofinal-app-notificaciones-1:8080
+  - url: http://localhost:8080
     description: Servidor local de notificaciones
 
 paths:
