--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=8075
 
 # application.properties
-auth.service.url=http://localhost:8087
-crud.service.url=http://localhost:8084
-profile.service.url=http://localhost:8079
+auth.service.url=http://${auth}:8087
+crud.service.url=http://${crud}:8084
+profile.service.url=http://${profile}:8079
 
 # Spring Cloud Gateway (configuración de rutas)
 spring.cloud.gateway.routes[0].id=auth-login
