--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuración del servidor
+# Configuraciï¿½n del servidor
 server.port=8075
 
 # application.properties
@@ -6,7 +6,10 @@ auth.service.url=http://${auth}:8087
 crud.service.url=http://${crud}:8084
 profile.service.url=http://${profile}:8079
 
-# Spring Cloud Gateway (configuración de rutas)
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+
+# Spring Cloud Gateway (configuraciï¿½n de rutas)
 spring.cloud.gateway.routes[0].id=auth-login
 spring.cloud.gateway.routes[0].uri=${auth.service.url}
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/usuarios/login
