--- a/openapi/local/perfiles.yaml
+++ b/openapi/local/perfiles.yaml
@@ -66,6 +66,7 @@ paths:
                   details:
                     type: string
                     example: 'Database connection issue'
+                    
     post:
       summary: Create a new user profile
       description: Create a new profile with the provided data.
@@ -99,6 +100,7 @@ paths:
                   details:
                     type: string
                     example: 'Invalid data provided'
+    
   /usuario/{id}:
     get:
       summary: Get a user profile by ID
@@ -177,6 +179,56 @@ paths:
                   error:
                     type: string
                     example: 'Profile not found'
+      security:
+        - bearerAuth: []  # Requiere autenticación con token Bearer
+
+    delete:
+      summary: Delete a user profile
+      description: Delete a user profile by their unique ID. Requires a valid token.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the user profile to delete.
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Profile deleted successfully.
+        '401':
+          description: Unauthorized - Token not provided or invalid.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: 'Token no válido'
+        '403':
+          description: Forbidden - Token ID does not match user ID.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+
+                  error:
+                    type: string
+                    example: 'No se puede eliminar: el ID del token no coincide con el ID del usuario'
+        '404':
+          description: Profile not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: 'Profile not found'
+      security:
+        - bearerAuth: [ ]  # Requiere autenticación con token Bearer
+
   /health:
     get:
       summary: Verifica el estado de la aplicación.
@@ -210,7 +262,13 @@ paths:
                   message:
                     type: string
                     example: "The application is currently experiencing issues."
+
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT  # Especifica el uso de tokens JWT
   schemas:
     UserProfile:
       type: object
